# vatis-rust

./: .gitignore  Cargo.toml
src/: main.rs
