[package]
name = "vatis"
version = "0.2.0"
authors = ["Bastiaan Schaap <bastiaan.schaap@nedap.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
log = "^0.4"
env_logger = "^0.7"
linux-stats = "^0.3"
tokio = { version = "^0.2", features = ["signal", "time", "macros"] }
futures = "^0.3"


[dependencies.paho-mqtt]
version = "^0.6"
default-features = false
features = ["bundled"]
